<resources>
    <string name="app_name">FixturesManage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_fixture">備品マスタ</string>
    <string name="menu_type">種別マスタ</string>
    <string name="menu_status">状態マスタ</string>
    <string name="menu_unit">単位マスタ</string>
    <string name="app_title">備品管理</string>
    <string name="create">登録</string>
    <string name="create_unit">単位 登録</string>
    <string name="create_type">種別 登録</string>
    <string name="create_status">状態 登録</string>
    <string name="create_fixture">備品 登録</string>
    <string name="show">登録</string>
    <string name="show_unit">単位 詳細</string>
    <string name="show_type">種別 詳細</string>
    <string name="show_status">状態 詳細</string>
    <string name="show_fixture">備品 詳細</string>
    <string name="edit">編集</string>
    <string name="edit_unit">単位 編集</string>
    <string name="edit_type">種別 編集</string>
    <string name="edit_status">状態 編集</string>
    <string name="edit_fixture">備品 編集</string>
    <string name="delete">削除</string>
    <string name="update">更新</string>
    <string name="search">検索</string>

    <string name="unit_name">単位名</string>
    <string name="type_name">種別名</string>
    <string name="status_name">状態名</string>
    <string name="fixture_name">備品名</string>
    <string name="fixture_type">備品 種別</string>
    <string name="fixture_status">備品 状態</string>
    <string name="fixture_quantity">備品 個数</string>
    <string name="fixture_unit">備品 単位</string>
</resources>