<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_fixture">

    <fragment
        android:id="@+id/nav_fixture"
        android:name="com.example.fixturesmanage.ui.fixture.FixtureFragment"
        android:label="@string/menu_fixture"
        tools:layout="@layout/fragment_fixture" >
        <action
            android:id="@+id/action_nav_fixture_to_fixtureCreateFragment"
            app:destination="@id/fixtureCreateFragment" />
        <action
            android:id="@+id/action_nav_fixture_to_fixtureShowFragment"
            app:destination="@id/fixtureShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_type"
        android:name="com.example.fixturesmanage.ui.type.TypeFragment"
        android:label="@string/menu_type"
        tools:layout="@layout/fragment_type" >
        <action
            android:id="@+id/action_nav_type_to_typeCreateFragment"
            app:destination="@id/typeCreateFragment" />
        <action
            android:id="@+id/action_nav_type_to_typeShowFragment"
            app:destination="@id/typeShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_status"
        android:name="com.example.fixturesmanage.ui.status.StatusFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" >
        <action
            android:id="@+id/action_nav_status_to_statusCreateFragment"
            app:destination="@id/statusCreateFragment" />
        <action
            android:id="@+id/action_nav_status_to_statusShowFragment"
            app:destination="@id/statusShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_unit"
        android:name="com.example.fixturesmanage.ui.unit.UnitFragment"
        android:label="@string/menu_unit"
        tools:layout="@layout/fragment_unit" >
        <action
            android:id="@+id/action_nav_unit_to_unitCreateFragment"
            app:destination="@id/unitCreateFragment" />
        <action
            android:id="@+id/action_nav_unit_to_unitShowFragment"
            app:destination="@id/unitShowFragment" />
    </fragment>

    <fragment
        android:id="@+id/unitCreateFragment"
        android:name="com.example.fixturesmanage.ui.unit.UnitCreateFragment"
        android:label="@string/create_unit"
        tools:layout="@layout/create_unit_fragment" >
        <action
            android:id="@+id/action_unitCreateFragment_to_nav_unit"
            app:destination="@id/nav_unit" />
    </fragment>
    <fragment
        android:id="@+id/typeCreateFragment"
        android:name="com.example.fixturesmanage.ui.type.TypeCreateFragment"
        android:label="@string/create_type"
        tools:layout="@layout/create_type_fragment" >
        <action
            android:id="@+id/action_typeCreateFragment_to_nav_type"
            app:destination="@id/nav_type" />
    </fragment>
    <fragment
        android:id="@+id/statusCreateFragment"
        android:name="com.example.fixturesmanage.ui.status.StatusCreateFragment"
        android:label="@string/create_status"
        tools:layout="@layout/create_status_fragment" >
        <action
            android:id="@+id/action_statusCreateFragment_to_nav_status"
            app:destination="@id/nav_status" />
    </fragment>
    <fragment
        android:id="@+id/fixtureCreateFragment"
        android:name="com.example.fixturesmanage.ui.fixture.FixtureCreateFragment"
        android:label="@string/create_fixture"
        tools:layout="@layout/create_fixture_fragment">
        <action
            android:id="@+id/action_fixtureCreateFragment_to_nav_fixture"
            app:destination="@id/nav_fixture" />
    </fragment>


    <fragment
        android:id="@+id/unitShowFragment"
        android:name="com.example.fixturesmanage.ui.unit.UnitShowFragment"
        android:label="@string/show_unit"
        tools:layout="@layout/show_unit_fragment" >
        <argument
            android:name="selectedId"
            app:argType="integer" />
        <action
            android:id="@+id/action_unitShowFragment_to_nav_unit"
            app:destination="@id/nav_unit" />
        <action
            android:id="@+id/action_unitShowFragment_to_unitEditFragment"
            app:destination="@id/unitEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/typeShowFragment"
        android:name="com.example.fixturesmanage.ui.type.TypeShowFragment"
        android:label="@string/show_type"
        tools:layout="@layout/show_type_fragment" >
        <argument
            android:name="selectedId"
            app:argType="integer" />
        <action
            android:id="@+id/action_typeShowFragment_to_nav_type"
            app:destination="@id/nav_type" />
        <action
            android:id="@+id/action_typeShowFragment_to_typeEditFragment"
            app:destination="@id/typeEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/statusShowFragment"
        android:name="com.example.fixturesmanage.ui.status.StatusShowFragment"
        android:label="@string/show_status"
        tools:layout="@layout/show_status_fragment" >
        <argument
            android:name="selectedId"
            app:argType="integer" />
        <action
            android:id="@+id/action_statusShowFragment_to_nav_status"
            app:destination="@id/nav_status" />
        <action
            android:id="@+id/action_statusShowFragment_to_statusEditFragment"
            app:destination="@id/statusEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/fixtureShowFragment"
        android:name="com.example.fixturesmanage.ui.fixture.FixtureShowFragment"
        android:label="@string/show_fixture"
        tools:layout="@layout/show_fixture_fragment" >
        <argument
            android:name="selectedId"
            app:argType="integer" />
        <action
            android:id="@+id/action_fixtureShowFragment_to_nav_fixture"
            app:destination="@id/nav_fixture" />
        <action
            android:id="@+id/action_fixtureShowFragment_to_fixtureEditFragment"
            app:destination="@id/fixtureEditFragment" />
    </fragment>


    <fragment
        android:id="@+id/unitEditFragment"
        android:name="com.example.fixturesmanage.ui.unit.UnitEditFragment"
        android:label="@string/edit_unit"
        tools:layout="@layout/edit_unit_fragment">
        <argument
            android:name="selectedId"
            app:argType="integer" />
        <action
            android:id="@+id/action_unitEditFragment_to_unitShowFragment"
            app:destination="@id/unitShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/statusEditFragment"
        android:name="com.example.fixturesmanage.ui.status.StatusEditFragment"
        android:label="@string/edit_status"
        tools:layout="@layout/edit_status_fragment">
        <argument
            android:name="selectedId"
            app:argType="integer" />
        <action
            android:id="@+id/action_statusEditFragment_to_statusShowFragment"
            app:destination="@id/statusShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/typeEditFragment"
        android:name="com.example.fixturesmanage.ui.type.TypeEditFragment"
        android:label="@string/edit_type"
        tools:layout="@layout/edit_type_fragment">
        <argument
            android:name="selectedId"
            app:argType="integer" />
        <action
            android:id="@+id/action_typeEditFragment_to_typeShowFragment"
            app:destination="@id/typeShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/fixtureEditFragment"
        android:name="com.example.fixturesmanage.ui.fixture.FixtureEditFragment"
        android:label="@string/edit_fixture"
        tools:layout="@layout/edit_fixture_fragment">
        <argument
            android:name="selectedId"
            app:argType="integer" />
        <action
            android:id="@+id/action_fixtureEditFragment_to_fixtureShowFragment"
            app:destination="@id/fixtureShowFragment" />
    </fragment>
</navigation>